--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
         "build-dev:sass": "sass --style=expanded --source-map src/sass:dist/css",
         "watch": "npm-run-all build build-dev -p watch:*",
-        "watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\"",
+        "watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\" --browser \"chrome\"",
         "watch:sassprefixer": "onchange \"src/sass/**/*.scss\" -- npm run build-dev",
         "watch:copy": "onchange -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" -- copyfiles -a -u 1 {{changed}} dist"
     },
