--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "stylelint-scss": "^4.3.0"
     },
     "dependencies": {
+        "flickity": "^3.0.0",
         "json-server": "^0.17.4"
     }
 }
